--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>Links | Patricio MG</title>
+    <title>LittleLink | Patricio MG - An open source DIY Linktree alternative</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
     
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
@@ -63,12 +63,12 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p>An open source DIY Linktree alternative.</p>
+            <p>Tecnico nivel superior.</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
 
-              <!-- LinkedIn -->
+              <!-- Linkedin -->
               <a class="button button-linked" href="https://www.linkedin.com/in/pmartinezg-6b659329a/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
 
               <!-- GitHub -->
