--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
               <a class="button button-github" href="https://github.com/MagnumVD64" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
               <!-- Google Calendar -->
-              <a class="button button-default" href="https://calendar.app.google/JWwjUa4GKrFmV5VLA" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/google-podcasts.svg" alt="Calendar Icon">Agendar una llamada</a>
+              <a class="button button-bandcamp" href="https://calendar.app.google/JWwjUa4GKrFmV5VLA" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/google-podcasts.svg" alt="Calendar Icon">Agendar una llamada</a>
 
               <!-- Generic Email -->
-              <a class="button button-default" href="mailto:p.martinez@duocuc.cl" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Enviame un correo</a>
+              <a class="button button-whatsapp" href="mailto:p.martinez@duocuc.cl" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Enviame un correo</a>
 
               <!-- Generic Homepage -->
               <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visita mi Web</a>
