--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
               <!-- Generic Email -->
               <a class="button button-whatsapp" href="mailto:p.martinez@duocuc.cl" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Enviame un correo</a>
 
-              <!-- Generic Homepage -->
+              <!-- Generic Homepage 
               <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visita mi Web</a>
+              -->
 
               <!-- Default LittleLink
               <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/littlelink.svg" alt="LittleLink Logo">LittleLink</a>
